fixed the slider. fixed the icon gaps

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -141,3 +141,9 @@ img.features_icon{
   padding-left: 5px;
   font-size: 12px;
 }
+
+img.features_icon{
+  margin-left:-21px;
+}
+
+
